Fix path of root folder for cross platform tests